fix: restore position sticky by removing overflow on #root

--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ html {
   box-sizing: inherit;
 }
 
-body, #root {
+body {
   margin: 0;
   max-width: 100%;
   overflow-x: hidden;
